--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "helloworld",
-  "version": "1.0.0",
-  "description": "html файл hello world!!!",
-  "main": "index.html",
+  "name": "azurenode",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AlexVGitHub/HelloWorld.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AlexVGitHub/HelloWorld/issues"
-  },
-  "homepage": "https://github.com/AlexVGitHub/HelloWorld#readme"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
+  }
 }
